name:                chired

version:             0.1.0.0

license-file:        LICENSE

author:              Izaak Meckler

maintainer:          ihmeckler@gmail.com

build-type:          Simple

cabal-version:       >=1.10

executable chired
  main-is:             Main.hs
  ghc-options: -with-rtsopts=-V0
  
  build-depends:       base >=4.7 && <4.8,
                       LDAP >= 0.6.10,
                       aeson >= 0.8,
                       scotty >= 0.9.0,
                       scotty-tls >= 0.3,
                       scotty-cookie >= 0.1.0.3,
                       containers >= 0.5.5,
                       text >= 1.2.0.3,
                       parsec >= 3.1.7,
                       bytestring >= 0.10,
                       transformers >= 0.4.2,
                       wai >= 3,
                       clientsession >= 0.9,
                       unix >= 2.7,
                       wai-middleware-static >= 0.6
  
  default-language:    Haskell2010
  
